--- a/exp-data-EM.ipynb
+++ b/exp-data-EM.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "buried-crown",
+   "id": "mobile-salmon",
    "metadata": {},
    "source": [
     "# Data"
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collaborative-bread",
+   "id": "steady-switch",
    "metadata": {},
    "source": [
     "# Inference"
@@ -517,8 +517,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "editorial-madrid",
+   "execution_count": 53,
+   "id": "sacred-distance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,11 +533,32 @@
     "    \n",
     "    eps = np.finfo(float).eps\n",
     "\n",
-    "    old_sg_u = np.ones(2)\n",
-    "    old_sg_w = np.ones(2)\n",
+    "    old_sg_u = np.zeros(2) -np.inf\n",
+    "    old_sg_w = np.zeros(2) -np.inf\n",
     "    old_mu = np.zeros(2)\n",
     "\n",
     "    itr = 1\n",
+    "    \n",
+    "    def optimize_Zu_Zw_FIRST(x, y):\n",
+    "\n",
+    "        def opt(param):\n",
+    "\n",
+    "            Zu = param[:n_u*2].reshape((n_u, 2))\n",
+    "            Zw = param[n_u*2:].reshape((n_w, 2))\n",
+    "\n",
+    "            Z = Zu[u] + Zw[w]\n",
+    "\n",
+    "            a = np.exp(Z[:, 0]) \n",
+    "            b = expit(Z[:, 1])\n",
+    "            neg_rate = -a*x  *(1-b)**r                                             \n",
+    "            ll_y = np.sum(neg_rate*y+(1-y)*np.log(1 - np.exp(neg_rate)+eps))       \n",
+    "\n",
+    "            return - ll_y\n",
+    "\n",
+    "        res = scipy.optimize.minimize(opt, \n",
+    "                                      x0=np.zeros(n_u*2+n_w*2))\n",
+    "\n",
+    "        return res.x[:n_u*2].reshape((n_u, 2)), res.x[n_u*2:].reshape((n_w, 2))\n",
     "\n",
     "    def optimize_Zu_Zw(x, y, sg_w, sg_u, mu):\n",
     "\n",
@@ -550,8 +571,8 @@
     "\n",
     "            a = np.exp(Z[:, 0]) \n",
     "            b = expit(Z[:, 1])\n",
-    "            neg_rate = -a*x  *(1-b)**r                                             # p = np.exp(-rate*x)\n",
-    "            ll_y = np.sum(neg_rate*y+(1-y)*np.log(1 - np.exp(neg_rate)+eps))       # np.log(p**y*(1-p)**(1-y)+eps).sum()\n",
+    "            neg_rate = -a*x  *(1-b)**r                                             \n",
+    "            ll_y = np.sum(neg_rate*y+(1-y)*np.log(1 - np.exp(neg_rate)+eps))       \n",
     "\n",
     "            ll_zw = scipy.stats.norm.logpdf(Zw, loc=mu/2, scale=sg_w).sum()\n",
     "            ll_zu = scipy.stats.norm.logpdf(Zu, loc=mu/2, scale=sg_u).sum() \n",
@@ -565,8 +586,10 @@
     "\n",
     "\n",
     "    while True:\n",
-    "\n",
-    "        Zu, Zw = optimize_Zu_Zw(x=x, y=y, sg_w=old_sg_w, sg_u=old_sg_u, mu=old_mu)\n",
+    "        if itr == 1:\n",
+    "            Zu, Zw = optimize_Zu_Zw_FIRST(x=x, y=y)\n",
+    "        else:\n",
+    "            Zu, Zw = optimize_Zu_Zw(x=x, y=y, sg_w=old_sg_w, sg_u=old_sg_u, mu=old_mu)\n",
     "\n",
     "        mu = np.mean(Zu[u] + Zw[w], axis=0)\n",
     "        sg_u = np.std(Zu, axis=0)\n",
@@ -585,9 +608,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "foster-berkeley",
+   "id": "verbal-ratio",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 [-16.94619839 -20.99870203] [16.0909386  49.05058915] [ 9.71073934 22.63069936] 4:49:27.182351\n",
+      "2 [-17.00821374 -20.95043688] [13.52368251 47.20173079] [11.8018168  29.35290579] 8:29:05.314733\n",
+      "3 [-19.08501404 -23.17194158] [27.40584356 42.09876167] [ 7.72446913 32.22399177] 13:59:48.819766\n",
+      "4 [-22.48122818 -24.57472509] [30.8497112  71.54688336] [19.56515469 48.64090824] 17:17:31.219626\n",
+      "5 [-20.78283871 -24.81993658] [31.54914947 88.36781003] [10.57581621 60.18088907] 22:02:16.240500\n",
+      "6 [-18.28303232 -20.95307164] [14.46041845 35.75133612] [ 8.50047785 15.02349218] 23:50:50.699903\n",
+      "7 [-16.50181968 -19.63288655] [ 9.33840308 26.56615665] [ 4.66815941 11.81378488] 1 day, 1:26:44.334660\n",
+      "8 [-17.23302386 -20.90760523] [26.89921168 68.49521575] [ 5.15342896 29.7392249 ] 1 day, 5:17:56.582611\n",
+      "9 [-26.2403717  -33.36425159] [52.8815587  85.14245768] [12.28110172 73.75505398] 1 day, 9:00:26.363676\n",
+      "10 [-18.35777946 -20.70083084] [14.61272705 40.3262262 ] [ 6.34044552 18.17971938] 1 day, 10:58:40.812160\n",
+      "11 [-26.25260285 -29.51470918] [ 54.19820826 174.28160072] [ 6.26115983 43.35803759] 1 day, 16:08:17.579027\n"
+     ]
+    }
+   ],
    "source": [
     "EM(data)"
    ]
@@ -595,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dynamic-superintendent",
+   "id": "documented-teach",
    "metadata": {},
    "outputs": [],
    "source": []
