--- a/expectation-maximization.ipynb
+++ b/expectation-maximization.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "successful-dream",
+   "id": "parliamentary-carol",
    "metadata": {},
    "source": [
     "# Hierarchical model - only user"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "progressive-hormone",
+   "id": "positive-benjamin",
    "metadata": {},
    "source": [
     "## Computing hyper parameters offline"
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "following-astrology",
+   "id": "micro-inspection",
    "metadata": {},
    "source": [
     "## Optimizing each user individually"
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "existing-swaziland",
+   "id": "composite-latin",
    "metadata": {},
    "source": [
     "## Optimizing all users at once"
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naked-modern",
+   "id": "judicial-politics",
    "metadata": {},
    "source": [
     "## Hierarchical modeling - both user and item"
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 420,
-   "id": "explicit-injury",
+   "id": "thick-chick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 421,
-   "id": "eleven-porter",
+   "id": "wicked-congo",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 422,
-   "id": "incident-diving",
+   "id": "satellite-purchase",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 423,
-   "id": "civil-drain",
+   "id": "assisted-frank",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 424,
-   "id": "improved-gathering",
+   "id": "lined-nicholas",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 425,
-   "id": "extended-mineral",
+   "id": "overall-harbor",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 426,
-   "id": "sophisticated-programmer",
+   "id": "tutorial-waterproof",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acute-thousand",
+   "id": "facial-accused",
    "metadata": {},
    "source": [
     "## Two parameters model"
@@ -526,8 +526,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
-   "id": "extra-death",
+   "execution_count": 440,
+   "id": "detected-research",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,8 +566,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
-   "id": "satellite-polish",
+   "execution_count": 441,
+   "id": "graphic-cycle",
    "metadata": {},
    "outputs": [
     {
@@ -592,8 +592,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
-   "id": "cardiac-eleven",
+   "execution_count": 442,
+   "id": "affecting-problem",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,8 +602,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
-   "id": "fluid-winning",
+   "execution_count": 443,
+   "id": "reserved-reward",
    "metadata": {},
    "outputs": [
     {
@@ -628,8 +628,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
-   "id": "adopted-photographer",
+   "execution_count": 444,
+   "id": "republican-budget",
    "metadata": {},
    "outputs": [
     {
@@ -654,8 +654,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
-   "id": "relevant-median",
+   "execution_count": 445,
+   "id": "successful-upset",
    "metadata": {},
    "outputs": [
     {
@@ -672,8 +672,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
-   "id": "coated-somerset",
+   "execution_count": 446,
+   "id": "computational-amateur",
    "metadata": {
     "scrolled": true
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "furnished-netherlands",
+   "id": "basic-share",
    "metadata": {},
    "source": [
     "### Just one parameter over the two"
@@ -704,8 +704,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
-   "id": "focused-oliver",
+   "execution_count": 447,
+   "id": "meaningful-network",
    "metadata": {
     "scrolled": true
    },
@@ -722,8 +722,8 @@
       "6 -2.071104965319864 0.1907605111023735 0.32178189988021266\n",
       "7 -2.0711051396077456 0.19075987407521205 0.32178144061169606\n",
       "Converged!\n",
-      "CPU times: user 1min 4s, sys: 775 ms, total: 1min 4s\n",
-      "Wall time: 1min 7s\n"
+      "CPU times: user 1min 11s, sys: 1.14 s, total: 1min 12s\n",
+      "Wall time: 1min 28s\n"
      ]
     }
    ],
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "verified-douglas",
+   "id": "retired-edwards",
    "metadata": {},
    "source": [
     "### Both parameters at same time"
@@ -791,8 +791,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
-   "id": "micro-thickness",
+   "execution_count": 448,
+   "id": "excessive-midwest",
    "metadata": {
     "scrolled": false
    },
@@ -801,20 +801,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 [-4.19842059 -2.03771927] [0.58425616 0.19740378] [0.7925591  0.32022576]\n",
-      "2 [-0.93715713 -0.80315988] [1.41541839 0.49399311] [2.00652731 0.32097644]\n",
-      "3 [-4.09295846 -2.33133531] [0.53358411 0.54055368] [1.83842329 1.793953  ]\n",
-      "4 [-4.24996329 -2.05853488] [0.55438907 0.19622653] [0.79192678 0.3174281 ]\n",
-      "5 [-4.25738131 -2.06191623] [0.5595878  0.18239876] [0.7800546  0.30340973]\n",
-      "6 [-4.25802752 -2.06233616] [0.56079141 0.18002763] [0.78097574 0.30174567]\n",
-      "7 [-4.25805592 -2.06237979] [0.56105834 0.17956798] [0.78137349 0.30148129]\n",
-      "8 [-4.25805293 -2.06238486] [0.56111517 0.17947662] [0.7814675  0.30143333]\n",
-      "9 [-4.25805108 -2.06238533] [0.56112702 0.17945858] [0.78148685 0.30142424]\n",
-      "10 [-4.25805097 -2.06238555] [0.56112963 0.17945478] [0.78149137 0.3014224 ]\n",
-      "11 [-4.25805046 -2.06238546] [0.56112999 0.17945413] [0.78149274 0.30142204]\n",
+      "1 [-4.24278741 -2.05694662] [0.58893745 0.1970424 ] [0.80205766 0.31617933]\n",
+      "2 [-2.50572476 -1.46702302] [1.57634058 0.64156748] [2.89144327 0.60018144]\n",
+      "3 [-4.23524855 -2.05335838] [0.58612194 0.1951994 ] [0.80547475 0.31202108]\n",
+      "4 [-2.04402308 -1.37752087] [1.31061334 0.49579481] [2.61904587 0.60410462]\n",
+      "5 [-4.23097388 -2.05120617] [0.58487441 0.19415335] [0.80612138 0.31244508]\n",
+      "6 [-1.57757453 -0.86899205] [1.06105364 0.39776217] [1.18722927 0.3199334 ]\n",
+      "7 [-4.1933331  -2.03344612] [0.58666256 0.19245421] [0.81170743 0.30524495]\n",
+      "8 [-4.25412396 -2.06071922] [0.5633401  0.18151713] [0.78403044 0.30181495]\n",
+      "9 [-4.25777386 -2.06227075] [0.56126726 0.17982232] [0.78163746 0.30147753]\n",
+      "10 [-4.25803074 -2.06237651] [0.56112483 0.17952268] [0.78148326 0.30143423]\n",
+      "11 [-4.25804954 -2.06238472] [0.56112562 0.17946705] [0.78148654 0.30142501]\n",
+      "12 [-4.25805045 -2.06238532] [0.56112896 0.17945639] [0.78149079 0.30142268]\n",
+      "13 [-4.25805058 -2.06238539] [0.56112977 0.17945439] [0.78149151 0.30142217]\n",
+      "14 [-4.25805028 -2.06238533] [0.56112997 0.17945401] [0.78149246 0.30142209]\n",
       "Converged!\n",
-      "CPU times: user 9min 46s, sys: 2min 19s, total: 12min 6s\n",
-      "Wall time: 9min 42s\n"
+      "CPU times: user 12min 42s, sys: 14.2 s, total: 12min 56s\n",
+      "Wall time: 16min 47s\n"
      ]
     }
    ],
@@ -822,11 +825,32 @@
     "%%time\n",
     "eps = np.finfo(float).eps\n",
     "\n",
-    "old_sg_u = np.ones(2)\n",
-    "old_sg_w = np.ones(2)\n",
+    "old_sg_u = np.ones(2) - np.inf\n",
+    "old_sg_w = np.ones(2) - np.inf\n",
     "old_mu = np.zeros(2)\n",
     "\n",
     "itr = 1\n",
+    "\n",
+    "def optimize_Zu_Zw_FIRST(x, y):\n",
+    "\n",
+    "    def opt(param):\n",
+    "\n",
+    "        Zu = param[:n_u*2].reshape((n_u, 2))\n",
+    "        Zw = param[n_u*2:].reshape((n_w, 2))\n",
+    "\n",
+    "        Z = Zu[u] + Zw[w]\n",
+    "\n",
+    "        a = np.exp(Z[:, 0]) \n",
+    "        b = expit(Z[:, 1])\n",
+    "        neg_rate = -a*x  *(1-b)**r                                             \n",
+    "        ll_y = np.sum(neg_rate*y+(1-y)*np.log(1 - np.exp(neg_rate)+eps))       \n",
+    "\n",
+    "        return - ll_y\n",
+    "\n",
+    "    res = scipy.optimize.minimize(opt, \n",
+    "                                  x0=np.zeros(n_u*2+n_w*2))\n",
+    "\n",
+    "    return res.x[:n_u*2].reshape((n_u, 2)), res.x[n_u*2:].reshape((n_w, 2))\n",
     "\n",
     "def optimize_Zu_Zw(x, y, sg_w, sg_u, mu):\n",
     "    \n",
@@ -855,7 +879,10 @@
     "\n",
     "while True:\n",
     "    \n",
-    "    Zu, Zw = optimize_Zu_Zw(x=x, y=y, sg_w=old_sg_w, sg_u=old_sg_u, mu=old_mu)\n",
+    "    if itr == 1:\n",
+    "        Zu, Zw = optimize_Zu_Zw_FIRST(x=x, y=y)\n",
+    "    else:\n",
+    "        Zu, Zw = optimize_Zu_Zw(x=x, y=y, sg_w=old_sg_w, sg_u=old_sg_u, mu=old_mu)\n",
     "    \n",
     "    mu = np.mean(Zu[u] + Zw[w], axis=0)\n",
     "    sg_u = np.std(Zu, axis=0)\n",
@@ -873,7 +900,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "usual-african",
+   "id": "first-notification",
    "metadata": {},
    "source": [
     "# Experiments with univariate Gaussian"
@@ -972,7 +999,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "warming-signature",
+   "id": "olive-tennis",
    "metadata": {},
    "source": [
     "# Very simple model"
@@ -1290,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "framed-person",
+   "id": "better-arnold",
    "metadata": {},
    "source": [
     "# Failed attempts"
@@ -71776,7 +71803,7 @@
   {
    "cell_type": "code",
    "execution_count": 438,
-   "id": "sufficient-criticism",
+   "id": "western-federal",
    "metadata": {},
    "outputs": [
     {
@@ -71820,7 +71847,7 @@
   {
    "cell_type": "code",
    "execution_count": 419,
-   "id": "provincial-breakfast",
+   "id": "radical-trauma",
    "metadata": {},
    "outputs": [
     {
@@ -71862,7 +71889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "likely-metadata",
+   "id": "numerical-launch",
    "metadata": {},
    "outputs": [],
    "source": []
