--- a/norm-flow/active-teaching.ipynb
+++ b/norm-flow/active-teaching.ipynb
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e76a7876",
+   "id": "622eb482",
    "metadata": {},
    "source": [
     "## Inference over all users in the same time - Q(Z) Q(theta) "
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "d16682e4",
+   "id": "ba519862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "74a8ea2b",
+   "id": "17cf26ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "8bd15de3",
+   "id": "7a20abf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "30cc2cac",
+   "id": "2e29a6b1",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "2ee75ecd",
+   "id": "48387594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "9ee2e4e4",
+   "id": "10f1f93b",
    "metadata": {
     "scrolled": false
    },
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 256,
-   "id": "ba2cefd1",
+   "id": "9b214d31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "id": "294ab762",
+   "id": "844e4fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 259,
-   "id": "d183866d",
+   "id": "c14cab52",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 260,
-   "id": "18cb5dc2",
+   "id": "4206e494",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "18d2c9b4",
+   "id": "ffe45d05",
    "metadata": {
     "scrolled": false
    },
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "a93e7249",
+   "id": "a1d4cc88",
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": 299,
-   "id": "36613c46",
+   "id": "ddf2516a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,13 +1335,13 @@
   {
    "cell_type": "code",
    "execution_count": 300,
-   "id": "6c06bef3",
+   "id": "7fef1b4a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_flow(x, y, r, epochs=1000):\n",
     "    \n",
-    "    flow = MultipleFlow(dim_Z=(n_u+n_w)*2, dim_theta=3*2, n_flows=16)\n",
+    "    flow = MultipleFlow(dim_Z=(n_u+n_w)*2, dim_theta=5, n_flows=16)\n",
     "    \n",
     "    optim = torch.optim.Adam(flow.parameters(), lr=1e-2)\n",
     "    \n",
@@ -1361,7 +1361,7 @@
   {
    "cell_type": "code",
    "execution_count": 301,
-   "id": "af868661",
+   "id": "f57ca8f6",
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": 302,
-   "id": "6d2fc917",
+   "id": "8cb4109f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "04788a73",
+   "id": "3bae0444",
    "metadata": {
     "scrolled": false
    },
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "6dfcdef6",
+   "id": "746400c2",
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "id": "9757700d",
+   "id": "540d46ec",
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "id": "b33ac317",
+   "id": "ed5d4bb4",
    "metadata": {},
    "outputs": [
     {
