--- a/norm-flow/toy-example.ipynb
+++ b/norm-flow/toy-example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "id": "a31e8b95",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "a9c343e7",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d82940bf",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "844d7fa4",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "a237d58f",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "e5088dce",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "id": "de704e3c",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "id": "153ef2f6",
    "metadata": {
     "scrolled": false
@@ -202,35 +202,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9209.590564898981\n",
-      "2583.3008335425325\n",
-      "2338.7079018149234\n",
-      "2309.138775549465\n",
-      "2129.706967629867\n",
-      "2115.2810479667373\n",
-      "2140.2536911805305\n",
-      "2109.5819624868236\n",
-      "2105.9571423747843\n",
-      "2109.3221421198014\n",
-      "2109.8785142411866\n",
-      "2144.1695851531313\n",
-      "2103.781528754274\n",
-      "2104.581632387136\n",
-      "2103.3470618907822\n",
-      "2106.4956247967543\n",
-      "2108.931538723192\n",
-      "2116.5377876564025\n",
-      "2103.8284988559426\n",
-      "2103.4297291317266\n"
+      "6622.5339765302\n",
+      "3072.0685454371223\n",
+      "2406.97755157187\n",
+      "2174.8784217689063\n",
+      "2146.4900575906213\n",
+      "2150.093707734993\n",
+      "2142.4957809369357\n",
+      "2151.054184529262\n",
+      "2142.5492682642243\n",
+      "2144.1074275169567\n",
+      "2144.175969248504\n",
+      "2145.472321987992\n",
+      "2148.163513900932\n",
+      "2142.916621652442\n",
+      "2143.931697671088\n",
+      "2143.076770135789\n",
+      "2143.0230753221945\n",
+      "2143.9173072062276\n",
+      "2145.0177323583725\n",
+      "2143.605671794944\n",
+      "CPU times: user 48.7 s, sys: 146 ms, total: 48.9 s\n",
+      "Wall time: 49.3 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "flow = Flow(dim=2, n_flows=16)\n",
     "shape = (1, 2)\n",
-    "train_flow(torch.from_numpy(x), flow, shape, epochs=5000)\n",
-    "# z0, zk, ldj, mu, log_var = flow((5000, 2))\n",
-    "# show_samples(z0.data, zk.data, mu, f\"N-flows: {n_flows}\")\n"
+    "train_flow(torch.from_numpy(x), flow, shape, epochs=5000)"
    ]
   },
   {
