--- a/inference/norm-flow/demo-doc-pytorch.ipynb
+++ b/inference/norm-flow/demo-doc-pytorch.ipynb
@@ -518,7 +518,7 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "     \\log(p_Y(y)) &= \\log\\left(p_X\\left(\\left(g_{(L-1)}^{-1}\\circ\\cdots\\circ g_{(0)}^{-1}\\right)\\left(y\\right)\\right)\\right)+\\sum^{L-1}_{l=0}\\log\\left(\\left|\\frac{dg^{-1}_{(l)}(y_{(l)})}{dy'}\\right|\\right),\n",
+    "     \\log(p_Y(y)) &= \\log\\left(p_X\\left(\\left(g_{(L-1)}^{-1}\\circ\\cdots\\circ g_{(0)}^{-1}\\right)\\left(y\\right)\\right)\\right)+\\sum^{L-1}_{l=0}\\log\\left(\\left\\vert\\frac{dg^{-1}_{(l)}(y_{(l)})}{dy'}\\right|\\right),\n",
     "     %\\left( g^{(l)}(y^{(l)})\n",
     "     %\\right).\n",
     "\\end{align}\n",
