--- a/inference/norm-flow/active-teaching-artificial-exp-ALT-DOUBLE-new.ipynb
+++ b/inference/norm-flow/active-teaching-artificial-exp-ALT-DOUBLE-new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 191,
    "id": "agreed-asian",
    "metadata": {},
    "outputs": [],
@@ -12,10 +12,13 @@
     "import scipy\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
+    "\n",
     "from scipy.special import digamma, gamma, logsumexp, expit\n",
     "from scipy.stats import norm, gamma, bernoulli\n",
     "from scipy import stats\n",
+    "\n",
     "from tqdm.notebook import tqdm\n",
+    "\n",
     "import torch\n",
     "import torch.distributions as dist\n",
     "from torch import nn\n",
@@ -26,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 192,
    "id": "brief-swimming",
    "metadata": {},
    "outputs": [],
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 201,
    "id": "21117d6a",
    "metadata": {},
    "outputs": [],
@@ -56,13 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 222,
    "id": "d0bff5a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "class NormalizingFlow(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Adapted from https://github.com/ex4sperans/variational-inference-with-normalizing-flows\n",
     "\n",
+    "    [Rezende and Mohamed, 2015]\n",
+    "\n",
+    "    \"\"\"\n",
     "    def __init__(self, dim, flow_length):\n",
     "        super().__init__()\n",
     "\n",
@@ -74,33 +82,43 @@
     "            PlanarFlowLogDetJacobian(t) for t in self.transforms\n",
     "        ))\n",
     "        \n",
+    "        self.dim = dim\n",
+    "        self.flow_length = flow_length\n",
+    "        \n",
     "        self.mu = nn.Parameter(torch.zeros(dim).uniform_(-0.01, 0.01))\n",
     "        self.log_var = nn.Parameter(torch.zeros(dim).uniform_(-0.01, 0.01))\n",
     "        \n",
-    "        self.dim = dim\n",
-    "        self.flow_length = flow_length\n",
-    "\n",
-    "    def forward(self, batch_size):\n",
+    "    def sample_prior(self, batch_size):\n",
     "        \n",
     "        std = torch.exp(0.5 * self.log_var)\n",
     "        eps = torch.randn((batch_size, self.dim))  \n",
-    "        z0 = self.mu + eps * std\n",
-    "        \n",
-    "        z=z0\n",
+    "        return self.mu + eps * std\n",
     "\n",
+    "    def log_prob_prior(self, x):\n",
+    "        std = torch.exp(0.5 * self.log_var)\n",
+    "        return dist.Normal(self.mu, std).log_prob(x).sum(axis=-1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \n",
+    "        batch_size = x.shape[0]\n",
+    "        \n",
+    "        prior_logp = self.log_prob_prior(x)\n",
+    "        \n",
     "        log_jacobians = torch.zeros((self.flow_length, batch_size, 1))\n",
     "\n",
     "        for i, transform, log_jacobian in zip(range(self.flow_length), self.transforms, self.log_jacobians):\n",
-    "            log_jacobians[i] = log_jacobian(z)\n",
-    "            z = transform(z)\n",
+    "            log_jacobians[i] = log_jacobian(x)\n",
+    "            x = transform(x)\n",
     "\n",
-    "        zk = z\n",
-    "\n",
-    "        return z0, z, log_jacobians, self.mu, self.log_var\n",
+    "        return x, prior_logp, log_jacobians\n",
     "\n",
     "\n",
     "class PlanarFlow(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Planar flow.\n",
     "\n",
+    "        z = f(x) = x + u h(wᵀx + b)\n",
+    "    \"\"\"\n",
     "    def __init__(self, dim):\n",
     "        super().__init__()\n",
     "\n",
@@ -117,10 +135,10 @@
     "        self.scale.data.uniform_(-0.01, 0.01)\n",
     "        self.bias.data.uniform_(-0.01, 0.01)\n",
     "\n",
-    "    def forward(self, z):\n",
+    "    def forward(self, x):\n",
     "\n",
-    "        activation = F.linear(z, self.weight, self.bias)\n",
-    "        return z + self.scale * self.tanh(activation)\n",
+    "        activation = F.linear(x, self.weight, self.bias)\n",
+    "        return x + self.scale * self.tanh(activation)\n",
     "\n",
     "\n",
     "class PlanarFlowLogDetJacobian(nn.Module):\n",
@@ -135,9 +153,9 @@
     "        self.scale = affine.scale\n",
     "        self.tanh = affine.tanh\n",
     "\n",
-    "    def forward(self, z):\n",
+    "    def forward(self, x):\n",
     "\n",
-    "        activation = F.linear(z, self.weight, self.bias)\n",
+    "        activation = F.linear(x, self.weight, self.bias)\n",
     "        psi = (1 - self.tanh(activation) ** 2) * self.weight\n",
     "        det_grad = 1 + torch.mm(psi, self.scale.t())\n",
     "        return safe_log(det_grad.abs())"
@@ -145,35 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "6e4f28bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DoubleFlow(nn.Module):\n",
-    "\n",
-    "    def __init__(self, dim, flow_length):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.flows = nn.Sequential(*(NormalizingFlow(d, flow_length=flow_length) for d in dim))\n",
-    "\n",
-    "    def forward(self, batch_size):\n",
-    "        \n",
-    "        out = ()\n",
-    "        for f in self.flows:\n",
-    "            out += f(batch_size)\n",
-    "\n",
-    "        return out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 223,
    "id": "569af7ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class FreeEnergyBound(nn.Module):\n",
+    "class LossTeaching(nn.Module):\n",
     "\n",
     "    def __init__(self, x, y, r, u, w, n_u, n_w):\n",
     "        super().__init__()\n",
@@ -185,16 +180,19 @@
     "        self.n_u = n_u\n",
     "        self.n_w = n_w\n",
     "\n",
-    "    def forward(self, flow, batch_size):\n",
+    "    def forward(self, z_flow, theta_flow, batch_size):\n",
     "        \n",
-    "        z0_Z, zk_Z, log_jacobians_Z, mu_Z, log_var_Z, \\\n",
-    "            z0_θ, zk_θ, log_jacobians_θ, mu_θ, log_var_θ  = flow(batch_size)\n",
+    "        z0_Z = z_flow.sample_prior(batch_size)\n",
+    "        zk_Z, prior_logprob_Z, log_det_Z = z_flow(z0_Z)\n",
+    "        \n",
+    "        z0_θ = theta_flow.sample_prior(batch_size)\n",
+    "        zk_θ, prior_logprob_θ, log_det_θ = theta_flow(z0_θ)\n",
+    "        \n",
+    "        ln_q0_Z = prior_logprob_Z.sum()\n",
+    "        ln_q0_θ = prior_logprob_θ.sum()\n",
     "\n",
-    "        ln_q0_Z = dist.Normal(mu_Z, torch.exp(0.5*log_var_Z)).log_prob(z0_Z).sum()\n",
-    "        ln_q0_θ = dist.Normal(mu_θ, torch.exp(0.5*log_var_θ)).log_prob(z0_θ).sum()\n",
-    "\n",
-    "        sum_lj_Z = log_jacobians_Z.sum()\n",
-    "        sum_lj_θ = log_jacobians_θ.sum()\n",
+    "        sum_ld_Z = log_det_Z.sum()\n",
+    "        sum_ld_θ = log_det_θ.sum()\n",
     "        \n",
     "        Zu1 = zk_Z[:, :self.n_u].T\n",
     "        Zw1 = zk_Z[:, self.n_u:self.n_w+n_u].T\n",
@@ -221,25 +219,28 @@
     "        ll_Zu2 = dist.Normal(mu2, torch.exp(0.5*log_var_u2)).log_prob(Zu2).sum()\n",
     "        ll_Zw2 = dist.Normal(mu2, torch.exp(0.5*log_var_w2)).log_prob(Zw2).sum()\n",
     "        \n",
-    "        to_min = (ln_q0_Z + ln_q0_θ - sum_lj_Z - sum_lj_θ\n",
+    "        to_min = (ln_q0_Z + ln_q0_θ - sum_ld_Z - sum_ld_θ\n",
     "                  - ll - ll_Zu1 - ll_Zu2 - ll_Zw1 - ll_Zw2) / batch_size\n",
     "        return to_min"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 224,
    "id": "9c4692b6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(x, y, r, u, w, n_u, n_w, \n",
-    "          flow_length=16, epochs=10000, initial_lr=0.01, lr_decay=0.999, batch_size=40):\n",
+    "          flow_length=16, epochs=10000, initial_lr=0.01, batch_size=40):\n",
     "    \n",
-    "    flow = DoubleFlow(dim=((n_u+n_w)*2, 6), flow_length=flow_length)\n",
-    "    bound = FreeEnergyBound(x=x, y=y, r=r, u=u, w=w, n_u=n_u, n_w=n_w)\n",
-    "    optimizer = optim.RMSprop(flow.parameters(), lr=initial_lr)\n",
-    "    scheduler = optim.lr_scheduler.ExponentialLR(optimizer, lr_decay)\n",
+    "    z_flow = NormalizingFlow(dim=(n_u+n_w)*2, flow_length=flow_length)\n",
+    "    theta_flow = NormalizingFlow(6, flow_length=flow_length)\n",
+    "    \n",
+    "    loss_func = LossTeaching(x=x, y=y, r=r, u=u, w=w, n_u=n_u, n_w=n_w)\n",
+    "    \n",
+    "    optimizer = optim.Adam(list(z_flow.parameters()) + list(theta_flow.parameters()), lr=initial_lr)\n",
+    "    # scheduler = optim.lr_scheduler.ExponentialLR(optimizer, lr_decay)\n",
     "    \n",
     "    hist_loss = np.zeros(epochs)\n",
     "    \n",
@@ -248,10 +249,12 @@
     "        for i in range(epochs):\n",
     "\n",
     "            optimizer.zero_grad()\n",
-    "            loss = bound(flow=flow, batch_size=batch_size)\n",
+    "            loss = loss_func(z_flow=z_flow, \n",
+    "                             theta_flow=theta_flow, \n",
+    "                             batch_size=batch_size)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "            scheduler.step()\n",
+    "            # scheduler.step()\n",
     "            \n",
     "            hist_loss[i] = loss.item()\n",
     "            \n",
@@ -259,7 +262,7 @@
     "                pbar.set_postfix({'loss': np.mean(hist_loss[i-50:i])})\n",
     "            pbar.update()\n",
     "            \n",
-    "    return flow, hist_loss"
+    "    return z_flow, theta_flow, hist_loss"
    ]
   },
   {
@@ -272,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 225,
    "id": "4038bf54",
    "metadata": {
     "scrolled": true
@@ -296,17 +299,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 226,
    "id": "37f64b67",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "def plot_posterior(flow, batch_size=1000, truth=None):   \n",
+    "def plot_posterior(theta_flow, batch_size=1000, truth=None):\n",
     "    \n",
-    "    z0_Z, zk_Z, log_jacobians_Z, mu_Z, log_var_Z, \\\n",
-    "        z0_θ, zk_θ, log_jacobians_θ, mu_θ, log_var_θ  = flow(batch_size)\n",
+    "    z0_θ = theta_flow.sample_prior(batch_size)\n",
+    "    zk_θ, prior_logprob_θ, log_det_θ = theta_flow(z0_θ)\n",
     "\n",
     "    mu1, log_var_u1, log_var_w1 = zk_θ.data[:, :3].T\n",
     "    mu2, log_var_u2, log_var_w2 = zk_θ.data[:, 3:].T\n",
@@ -390,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 227,
    "id": "detected-research",
    "metadata": {},
    "outputs": [],
@@ -432,9 +435,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 228,
    "id": "ad8ef6f8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -458,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 229,
    "id": "fa8b3e82",
    "metadata": {},
    "outputs": [],
@@ -471,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 230,
    "id": "computational-amateur",
    "metadata": {
     "scrolled": true
@@ -507,12 +512,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd7573823e3944dcb1f28e3e17bfea0f",
+       "model_id": "b27fb22f26524cfebf277136b3129c3f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/5000 [00:00<?, ?it/s]"
+       "  0%|          | 0/1000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -520,11 +525,12 @@
     }
    ],
    "source": [
-    "flow, hist_loss = train(x=data['x'], y=data['y'], \n",
-    "                        r=data['r'], u=data['u'], w=data['w'],\n",
-    "                        n_u=data['n_u'], n_w=data['n_w'],\n",
-    "                        batch_size=40,\n",
-    "                        epochs=5000)"
+    "z_flow, theta_flow, hist_loss = train(\n",
+    "    x=data['x'], y=data['y'], \n",
+    "    r=data['r'], u=data['u'], w=data['w'],\n",
+    "    n_u=data['n_u'], n_w=data['n_w'],\n",
+    "    batch_size=40,\n",
+    "    epochs=1000)"
    ]
   },
   {
@@ -534,7 +540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_loss(hist_loss, zoom_start=500)"
+    "plot_loss(hist_loss, zoom_start=5000)"
    ]
   },
   {
@@ -544,8 +550,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_posterior(flow, truth={'mu': mu, 'sg_u': sg_u, 'sg_w': sg_w,\n",
-    "                            'mu_smp': mu_smp, 'sg_u_smp': sg_u_smp, 'sg_w_smp': sg_w_smp},\n",
+    "plot_posterior(theta_flow, \n",
+    "               truth={'mu': mu, 'sg_u': sg_u, 'sg_w': sg_w,\n",
+    "                      'mu_smp': mu_smp, 'sg_u_smp': sg_u_smp, 'sg_w_smp': sg_w_smp},\n",
     "              batch_size=2000)"
    ]
   },
@@ -1025,11 +1032,12 @@
     }
    ],
    "source": [
-    "flow, hist_loss = train(x=data['x'], y=data['y'], \n",
-    "                        r=data['r'], u=data['u'], w=data['w'],\n",
-    "                        n_u=data['n_u'], n_w=data['n_w'],\n",
-    "                        batch_size=40,\n",
-    "                        epochs=5000)"
+    "z_flow, theta_flow, hist_loss = train(\n",
+    "    x=data['x'], y=data['y'], \n",
+    "    r=data['r'], u=data['u'], w=data['w'],\n",
+    "    n_u=data['n_u'], n_w=data['n_w'],\n",
+    "    batch_size=40,\n",
+    "    epochs=5000)"
    ]
   },
   {
@@ -1081,7 +1089,7 @@
     }
    ],
    "source": [
-    "plot_posterior(flow, batch_size=2000)"
+    "plot_posterior(theta_flow, batch_size=2000)"
    ]
   }
  ],
