--- a/inference/norm-flow/norm-flow-artificial-exp.ipynb
+++ b/inference/norm-flow/norm-flow-artificial-exp.ipynb
@@ -171,6 +171,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48a6d161",
+   "metadata": {},
+   "source": [
+    "We assume the following model:\n",
+    "\n",
+    "\\begin{align}\n",
+    "Z_u^\\rho &\\sim \\mathcal{N}(0, \\sigma_u^\\rho)\\\\\n",
+    "Z_w^\\rho &\\sim \\mathcal{N}(0, \\sigma_w^\\rho) \\\\\n",
+    "Z_{u, w}^\\rho &= \\mu^\\rho + Z_u^\\rho + Z_w^\\rho \\\\\n",
+    "\\end{align}\n",
+    "where $Z_u^{\\rho}$ is a random variable whose distribution is specific to user $u$ and parameter $\\rho$, and $\\rho \\in {\\alpha, \\beta}$.\n",
+    "\n",
+    "The probability of recall for user $u$ and item/word $w$ at time $t$ is defined as:\n",
+    "\\begin{align}\n",
+    "p(\\omega = 1 \\mid t, u, w) &= e^{-Z_{u, w}^\\alpha (1-Z_{u, w}^\\beta)^n \\delta_{u, w}^t}  \\\\\n",
+    "\\end{align}\n",
+    "where $\\delta_{u, w}^t$ is the time elapsed since the last presentation for user $u$, item $w$ at time $t$.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 223,
    "id": "569af7ba",
